[gd_scene load_steps=4 format=3 uid="uid://bxdepwhprt4pp"]

[ext_resource type="Script" uid="uid://bj20fx8i5xny6" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="Script" uid="uid://dlwh8mqmkmuqo" path="res://scripts/board.gd" id="2_lnu2h"]
[ext_resource type="Script" uid="uid://b3kuug82fetu7" path="res://scripts/setup_phase_ui.gd" id="3_lnu2h"]

[node name="Game" type="Node2D"]
script = ExtResource("1_yqjtg")

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_lnu2h")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_top = -2.0
offset_right = 984.0
offset_bottom = 980.0
color = Color(0.4862745, 0.4862745, 0.4862745, 0.5882353)

[node name="Win Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 204.0
offset_top = 360.0
offset_right = 817.0
offset_bottom = 466.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "Player ONE WON"

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.4220002
anchor_top = 2.015
anchor_right = 2.4220002
anchor_bottom = 2.015
offset_left = 420.0
offset_top = 483.0
offset_right = 592.0
offset_bottom = 530.0
grow_horizontal = 2
grow_vertical = 2
text = "Play
"

[node name="SetupPhaseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_lnu2h")

[node name="VBoxContainer" type="VBoxContainer" parent="SetupPhaseUI"]
layout_mode = 0
offset_left = 786.0
offset_top = 41.0
offset_right = 938.0
offset_bottom = 247.0

[node name="Pawn_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Pawn"

[node name="Bishop_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Bishop"

[node name="Knight_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Knight"

[node name="King_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn King"

[node name="Archer_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Archer"

[node name="Archbishop_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Archbishop
"

[node name="Mitosis_Button" type="Button" parent="SetupPhaseUI/VBoxContainer"]
layout_mode = 2
text = "Spawn Mitosis
"

[connection signal="selected_square" from="." to="Board" method="_on_game_selected_square"]
[connection signal="refund_piece" from="Board" to="SetupPhaseUI" method="_on_board_refund_piece"]
[connection signal="set_status" from="Board" to="." method="_on_board_set_status"]
[connection signal="set_status" from="Board" to="SetupPhaseUI" method="_on_board_set_status"]
[connection signal="setup_complete" from="Board" to="." method="_on_board_setup_complete"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="spawn_piece" from="SetupPhaseUI" to="Board" method="_on_setup_phase_ui_spawn_piece"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Pawn_Button" to="SetupPhaseUI" method="_on_pawn_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Bishop_Button" to="SetupPhaseUI" method="_on_bishop_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Knight_Button" to="SetupPhaseUI" method="_on_knight_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/King_Button" to="SetupPhaseUI" method="_on_king_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Archer_Button" to="SetupPhaseUI" method="_on_archer_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Archbishop_Button" to="SetupPhaseUI" method="_on_archbishop_button_pressed"]
[connection signal="pressed" from="SetupPhaseUI/VBoxContainer/Mitosis_Button" to="SetupPhaseUI" method="_on_mitosis_button_pressed"]
